--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/svg+xml" href="./assets/logo.png" />
 
-    <title>food lover</title>
+    <title>Pizza Home</title>
     <meta name="description" content="the best resturant he know what you need">
     <link rel="stylesheet" href="stylee.css">
 </head>
